# POIiO-2026---projekt-automatu-do-kawy

CoffeMachine/: CoffeMachine.vcxproj  CoffeMachine.vcxproj.filters  MyForm.cpp  Tdrinks.cpp  Tdrinks.h  coffemachine.db
Qt_GUI/: CMakeLists.txt  CMakeUserPresets.json  Qt_GUI.cpp  Qt_GUI.h  Qt_GUI.ui  main.cpp
